# block-flow

./: .pre-commit-config.yaml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cliff.toml  deny.toml
.github/workflows/: build.yml
proto/: blockflow.proto
src/: lib.rs
src/config/: config.rs
src/db/: models.rs
src/pb/: blockflow.rs
src/service/: collect.rs
src/utils/: mod.rs
